// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings for Custom page matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="index"
  >
    <a
      class="index Back Block"
      href="/examples"
    >
      <img
        alt="back"
        src="arrow.svg"
      />
    </a>
    <div
      class="Settings"
    >
      <h1>
        test
      </h1>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Algorithm:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-74"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Choose between ANGEL output and original dataset. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              ANGEL
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              See the original data
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index neighbour"
      >
        <div
          class="index"
        >
          <p>
            Neighbour number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-75"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The k-nearest neighborhood selection, used to construct an adjacency matrix. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 25%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 50%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 75%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="4"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 25%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              20
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 50%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 75%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10%
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30%
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor density:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-76"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Determines the number of anchor points. E.g. 0.1 = nearest integer of (0.1 * number of data points) 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 33.33333333333333%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 33.33333333333333%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="0.2"
            aria-valuemin="0.05"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 33.33333333333333%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.05
            </span>
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 33.33333333333333%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.2
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Epsilon:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-77"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Controls the balance between local and global preservation performance. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="5"
            aria-valuemin="0.1"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              5
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor modification:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-78"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Whether to relocate anchor points' position according to the cohort distance relations. If 0: keep the original anchor position. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              0
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              1
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Show Data Preservation Error:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-79"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The red lines link the wrongly preserved local neighbourhood errors. If you click on a point, it will show you it's original label! 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Yes
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              No
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Settings for Reviewer page matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="index"
  >
    <a
      class="index Back Block"
      href="/examples"
    >
      <img
        alt="back"
        src="arrow.svg"
      />
    </a>
    <div
      class="Settings"
    >
      <h1>
        test
      </h1>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Algorithm:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-88"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Choose between different embedding algrotihms. 
              <a
                class="link"
                href="http://docs.see-your-embeddings.com/"
                rel="noreferrer"
                target="_blank"
              >
                See Docs.
              </a>
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              COVA
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              ANGEL
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div>
        <div
          class="index"
        >
          <div
            class="index"
          >
            <p>
              Dimension:
            </p>
            <div
              class="Tooltip"
            >
              <img
                alt="info-89"
                src="info.svg"
              />
              <div
                style="top: 19px; left: -115px;"
              >
                Choose the target dimension of your visualization. 
              </div>
            </div>
          </div>
          <div
            class="CheckBoxes"
          >
            <label>
              <input
                checked=""
                type="radio"
              />
              <span
                class="text"
              >
                2
              </span>
              <span
                class="checkmark"
              />
            </label>
            <label>
              <input
                type="radio"
              />
              <span
                class="text"
              >
                3
              </span>
              <span
                class="checkmark"
              />
            </label>
          </div>
        </div>
        <div
          class="index label"
        >
          <p>
            Choose a File:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-90"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Currently we only support .mat files. The format is: 'g': Data matrix, 'label': Cohort label column. 
              <a
                class="link"
                href="http://localhost/api/dynamic/exampleMat/bicycle_sample.mat"
                rel="noreferrer"
                target="_blank"
              >
                See Example file here
              </a>
            </div>
          </div>
        </div>
        <div
          class="Wrapper"
        >
          <div
            class="Container"
            style="border-color: #bbb;"
            tabindex="0"
          >
            <input
              accept=".mat"
              autocomplete="off"
              data-testid="filearea"
              multiple=""
              style="display: none;"
              tabindex="-1"
              type="file"
            />
            <label>
              Drag and Drop or Click HERE to choose file
            </label>
          </div>
        </div>
      </div>
      <div
        class="index neighbour"
      >
        <div
          class="index"
        >
          <p>
            Neighbour number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-91"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The k-nearest neighborhood selection, used to construct an adjacency matrix. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 25%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 50%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 75%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="4"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 25%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              20
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 50%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 75%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10%
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30%
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor density:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-92"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Determines the number of anchor points. E.g. 0.1 = nearest integer of (0.1 * number of data points) 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="0.2"
            aria-valuemin="0.1"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.2
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Epsilon:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-93"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Controls the balance between local and global preservation performance. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="5"
            aria-valuemin="0.1"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              5
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor modification:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-94"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Whether to relocate anchor points' position according to the cohort distance relations. If 0: keep the original anchor position. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              0
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              1
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Show Data Preservation Error:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-95"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The red lines link the wrongly preserved local neighbourhood errors. If you click on a point, it will show you it's original label! 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Yes
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              No
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Settings matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="index"
  >
    <a
      class="index Back Block"
      href="/examples"
    >
      <img
        alt="back"
        src="arrow.svg"
      />
    </a>
    <div
      class="Settings"
    >
      <h1>
        test
      </h1>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Algorithm:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-6"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Choose between different embedding algrotihms. Or see the original dataset. 
              <a
                class="link"
                href="http://docs.see-your-embeddings.com/"
                rel="noreferrer"
                target="_blank"
              >
                See Docs.
              </a>
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              COVA
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              ANGEL
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              See the original data
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index neighbour"
      >
        <div
          class="index"
        >
          <p>
            Neighbour number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-7"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The k-nearest neighborhood selection, used to construct an adjacency matrix. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 25%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 50%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 75%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="4"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 25%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              20
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 50%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 75%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10%
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30%
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor density:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-8"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Determines the number of anchor points. E.g. 0.1 = nearest integer of (0.1 * number of data points) 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 33.33333333333333%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 33.33333333333333%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="0.2"
            aria-valuemin="0.05"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 33.33333333333333%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.05
            </span>
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 33.33333333333333%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.2
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Epsilon:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-9"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Controls the balance between local and global preservation performance. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="5"
            aria-valuemin="0.1"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              5
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor modification:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-10"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Whether to relocate anchor points' position according to the cohort distance relations. If 0: keep the original anchor position. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              0
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              1
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Show Data Preservation Error:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-11"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The red lines link the wrongly preserved local neighbourhood errors. If you click on a point, it will show you it's original label! 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Yes
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              No
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test UI changes and events Checkboxes clicks don't change common attributes 1`] = `
<DocumentFragment>
  <div
    class="index"
  >
    <a
      class="index Back Block"
      href="/examples"
    >
      <img
        alt="back"
        src="arrow.svg"
      />
    </a>
    <div
      class="Settings"
    >
      <h1>
        test
      </h1>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Algorithm:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-18"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Choose between different embedding algrotihms. Or see the original dataset. 
              <a
                class="link"
                href="http://docs.see-your-embeddings.com/"
                rel="noreferrer"
                target="_blank"
              >
                See Docs.
              </a>
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              COVA
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              ANGEL
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              See the original data
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index neighbour"
      >
        <div
          class="index"
        >
          <p>
            Neighbour number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-19"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The k-nearest neighborhood selection, used to construct an adjacency matrix. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 25%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 50%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 75%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="4"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 25%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              20
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 50%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 75%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10%
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30%
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor density:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-20"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Determines the number of anchor points. E.g. 0.1 = nearest integer of (0.1 * number of data points) 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 33.33333333333333%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 33.33333333333333%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="0.2"
            aria-valuemin="0.05"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 33.33333333333333%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.05
            </span>
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 33.33333333333333%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.2
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Epsilon:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-21"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Controls the balance between local and global preservation performance. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="5"
            aria-valuemin="0.1"
            aria-valuenow="0.1"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.1
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              5
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Anchor modification:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-22"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Whether to relocate anchor points' position according to the cohort distance relations. If 0: keep the original anchor position. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              0
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              1
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Show Data Preservation Error:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-23"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The red lines link the wrongly preserved local neighbourhood errors. If you click on a point, it will show you it's original label! 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Yes
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              No
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test UI changes and events Checkboxes clicks don't change common attributes 2`] = `
<DocumentFragment>
  <div
    class="index"
  >
    <a
      class="index Back Block"
      href="/examples"
    >
      <img
        alt="back"
        src="arrow.svg"
      />
    </a>
    <div
      class="Settings"
    >
      <h1>
        test
      </h1>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Algorithm:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-29"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Choose between different embedding algrotihms. Or see the original dataset. 
              <a
                class="link"
                href="http://docs.see-your-embeddings.com/"
                rel="noreferrer"
                target="_blank"
              >
                See Docs.
              </a>
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              COVA
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              ANGEL
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              See the original data
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index neighbour"
      >
        <div
          class="index"
        >
          <p>
            Neighbour number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-30"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The k-nearest neighborhood selection, used to construct an adjacency matrix. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 25%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 50%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 75%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="4"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 25%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              20
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 50%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 75%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              10%
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              30%
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Alpha:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-31"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              Controls the balance between local and global preservation performance. From 0 to 1 is from local to global. 
            </div>
          </div>
        </div>
        <div
          class="rc-slider rc-slider-with-marks"
        >
          <div
            class="rc-slider-rail"
            style="height: 4px;"
          />
          <div
            class="rc-slider-track"
            style="height: 4px; left: 0%; width: 40%;"
          />
          <div
            class="rc-slider-step"
          >
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 0%;"
            />
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 20%;"
            />
            <span
              class="rc-slider-dot rc-slider-dot-active"
              style="height: 10px; width: 10px; bottom: -3px; left: 40%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 60%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 80%;"
            />
            <span
              class="rc-slider-dot"
              style="border: 2px solid #fff; height: 10px; width: 10px; bottom: -3px; left: 100%;"
            />
          </div>
          <div
            aria-disabled="false"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="0.4"
            class="rc-slider-handle"
            role="slider"
            style="height: 20px; width: 20px; margin-top: -9px; box-shadow: none; left: 40%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          >
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 0%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0
            </span>
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 20%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.2
            </span>
            <span
              class="rc-slider-mark-text rc-slider-mark-text-active"
              style="transform: translateX(-50%); left: 40%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.4
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 60%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.6
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 80%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              0.8
            </span>
            <span
              class="rc-slider-mark-text"
              style="transform: translateX(-50%); left: 100%; font-size: 0.85rem; color: rgb(204, 204, 204);"
            >
              1
            </span>
          </div>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Cohort number:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-32"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The original cohort number keeps the same cohort as the original dataset. The 10% number of points re-cluster the original dataset into some smaller cohorts where the cohort number equals to 10% number of points. 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Original cohort number
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              10% of the number of points
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
      <div
        class="index"
      >
        <div
          class="index"
        >
          <p>
            Show Data Preservation Error:
          </p>
          <div
            class="Tooltip"
          >
            <img
              alt="info-33"
              src="info.svg"
            />
            <div
              style="top: 19px; left: -115px;"
            >
              The red lines link the wrongly preserved local neighbourhood errors. If you click on a point, it will show you it's original label! 
            </div>
          </div>
        </div>
        <div
          class="CheckBoxes"
        >
          <label>
            <input
              type="radio"
            />
            <span
              class="text"
            >
              Yes
            </span>
            <span
              class="checkmark"
            />
          </label>
          <label>
            <input
              checked=""
              type="radio"
            />
            <span
              class="text"
            >
              No
            </span>
            <span
              class="checkmark"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
